correct overflow and round decimals

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ option {
     background-color: #000;
     border: solid thin #fff;
     padding: 5px 10px;
+    top: -75px;
 }
 
 .infolabel h1 {
